--- a/src/Mzayad.Web/Content/site-home.less
+++ b/src/Mzayad.Web/Content/site-home.less
@@ -25,11 +25,39 @@
                 font-size: 4.8rem;
             }
 
-            ul {
-                -moz-column-count: 2;
-                -webkit-column-count: 2;
-                column-count: 2;
-            }  
+            h3 {
+                font-size: 2rem;
+            }
+
+            .product-information {
+
+                position: relative;
+                max-height: 100px;
+                overflow: hidden;
+
+                .more-overlay {
+                    display: none;
+                    position: absolute;
+                    left: 0;
+                    right: 0;
+                    bottom: 0;
+                    width: 100%;
+                    height: 20px;
+                    background: transparent url('/content/images/transparent-gradient.png') center center repeat-x;
+                }
+
+                .product-specifications > ul {
+                    -moz-column-count: 2;
+                    -webkit-column-count: 2;
+                    column-count: 2;
+                }
+            }      
+
+            .btn-show-more, .btn-show-less {
+                display: none;
+                padding: 0;
+                font-size: 1.4rem;
+            }
         }
 
         .auction-status {
