--- a/src/Mzayad.Web/Views/Home/Index.cshtml
+++ b/src/Mzayad.Web/Views/Home/Index.cshtml
@@ -51,9 +51,9 @@
                                 <li><span data-bind="text: name"></span>: <span data-bind="text: value"></span></li>
                             </ul>
                         </div>
+                        <div class="auction-price">Retail price: <span data-bind="text: retailPrice"></span></div>
                         <div class="more-overlay"></div>
                     </div>
-                    <div class="auction-price">Retail price: <span data-bind="text: retailPrice"></span></div>
                     <div class="information-toggles text-right">
                         <button class="btn btn-link btn-sm btn-show-more">More<i class="fa fa-caret-down fa-pad-left"></i></button>
                         <button class="btn btn-link btn-sm btn-show-less">Less<i class="fa fa-caret-up fa-pad-left"></i></button>
@@ -124,17 +124,17 @@
         <script src="/signalr/hubs"></script>
         <script>
 
-            $(function () {
+            $(function() {
 
                 var Auction = function(data) {
                     var self = this;
-                      
+
                     self.auctionId = data.auctionId;
                     self.title = data.title;
                     self.description = data.description,
-                    self.specifications = data.specifications,
-                    self.retailPrice = data.retailPrice,
-                    self.images = data.images;
+                        self.specifications = data.specifications,
+                        self.retailPrice = data.retailPrice,
+                        self.images = data.images;
 
                     self.status = ko.observable(data.status);
                     self.isLoaded = ko.observable(false);
@@ -145,17 +145,17 @@
 
                     self.displayTemplate = function() {
                         switch (self.status()) {
-                            case "Live":
-                                return "live-template";
-                            case "Upcoming":
-                                return "upcoming-template";
-                            case "Closed":
-                                return "closed-template";
-                            default:
-                                throw "Invalid auction status.";
+                        case "Live":
+                            return "live-template";
+                        case "Upcoming":
+                            return "upcoming-template";
+                        case "Closed":
+                            return "closed-template";
+                        default:
+                            throw "Invalid auction status.";
                         }
                     }
-                    
+
                     self.timeLeftFormatted = ko.computed(function() {
                         return TimeUtilities.getTimeLeft(self.timeLeft());
                     });
@@ -164,8 +164,12 @@
                         if (!self.lastBidUser()) {
                             return "";
                         }
-                          
-                        return "Last Bid: KD " + self.lastBidAmount() + " by " + self.lastBidUser();
+
+                        if (self.status() === "Closed") {
+                            return "Winning Bid: KD " + self.lastBidAmount() + " by " + self.lastBidUser();
+                        }
+
+                        return "Current Bid: KD " + self.lastBidAmount() + " by " + self.lastBidUser();
                     });
 
                     self.startTimeFormatted = ko.computed(function() {
@@ -193,15 +197,15 @@
                     self.auctions(mappedAuctions);
                 };
 
-                var auctions = @Html.Raw(JsonConvert.SerializeObject(Model.Auctions, Formatting.Indented, new JsonSerializerSettings { ContractResolver = new CamelCasePropertyNamesContractResolver() }));
+                var auctions = @Html.Raw(JsonConvert.SerializeObject(Model.Auctions, Formatting.Indented, new JsonSerializerSettings {ContractResolver = new CamelCasePropertyNamesContractResolver()}));
                 var viewModel = new AuctionsViewModel(auctions);
-                
+
                 ko.applyBindings(viewModel);
 
                 var auctionIds = @JsonConvert.SerializeObject(Model.LiveAuctionIds);
                 var auctionHub = $.connection.auctionHub;
 
-                auctionHub.client.updateAuctions = function (results) {
+                auctionHub.client.updateAuctions = function(results) {
                     console.log(results);
                     var auctionJson = $.parseJSON(results);
                     for (var i = 0, len = auctionJson.length; i < len; ++i) {
@@ -217,13 +221,16 @@
                 };
 
                 auctionHub.client.closeAuction = function(auctionId) {
-                    // TODO: update UI on auction close
                     console.log("Closed auction: " + auctionId);
+                    var auction = viewModel.getAuction(auctionId);
+                    if (auction) {
+                        auction.status("Closed");
+                    }
                 }
 
                 $.connection.hub.logging = true;
                 $.connection.hub.start().done(function() {
-                    auctionHub.server.initAuctions(auctionIds).done(function (results) {
+                    auctionHub.server.initAuctions(auctionIds).done(function(results) {
                         console.log(results);
                     });
                 });
@@ -272,9 +279,9 @@
                     var productInformation = auctionDetails.find(".product-information");
                     var moreOverlay = productInformation.find(".more-overlay");
                     var showMore = $this.siblings(".btn-show-more");
-                    
+
                     productInformation.animate({ maxHeight: 100 }, 500);
-                    moreOverlay.show();       
+                    moreOverlay.show();
                     showMore.show();
                     $this.hide();
                 };
