--- a/src/Mzayad.Web/Views/Shared/_Layout_UserMyAccount.cshtml
+++ b/src/Mzayad.Web/Views/Shared/_Layout_UserMyAccount.cshtml
@@ -11,7 +11,7 @@
     <li class="dropdown">
         <a href="#" class="dropdown-toggle" data-toggle="dropdown">@string.Format(Global.HelloFirstName, User.Identity.GetDisplayName())<i class="fa fa-caret-down fa-pad-left"></i></a>
         <ul class="dropdown-menu">
-            <li>@Html.ActionLink(Global.MyAccount, "MyAccount", "User", new { area = "", language = Html.Language() }, null)</li>
+            <li>@Html.ActionLink(Global.Dashboard, "Dashboard", "User", new { area = "", language = Html.Language() }, null)</li>
             <li>
                 <a href="javascript:document.getElementById('signout').submit();">@Global.SignOut</a>
                 @using (Html.BeginForm("SignOut", "Account", new { area = "", language = Html.Language() }, FormMethod.Post, new { id = "signout" }))
