MZ-52 changed base font to ubuntu

--- a/src/Mzayad.Web/Content/site.less
+++ b/src/Mzayad.Web/Content/site.less
@@ -5,6 +5,7 @@ html { font-size: 62.5%; }
 body {
     padding-top: 75px;
     padding-bottom: 20px;  
+    font-family: ubuntu;
 }
 
 body > div { 
