--- a/src/Mzayad.Web/Views/User/_Layout.cshtml
+++ b/src/Mzayad.Web/Views/User/_Layout.cshtml
@@ -10,9 +10,9 @@
     <div class="col-lg-3 col-md-4 col-sm-5">
         <ul class="menu-list">
             <li><a href="@Url.Action("EditAccount")"><i class="fa fa-fw fa-pad-right fa-user"></i>@Global.EditAccount</a></li>
+            <li><a href="@Url.Action("EditProfile")"><i class="fa fa-fw fa-pad-right fa-rocket"></i>@Global.EditProfile</a></li>
             <li><a href="@Url.Action("ChangePassword")"><i class="fa fa-fw fa-pad-right fa-lock"></i>@Global.ChangePassword</a></li>
             <li><a href="@Url.Action("Notifications")"><i class="fa fa-fw fa-pad-right fa-bullhorn"></i>@Global.Notifications</a></li>
-            <li><a href="@Url.Action("EditProfile")"><i class="fa fa-fw fa-pad-right fa-book"></i>@Global.EditProfile</a></li>
         </ul>
     </div>
     <div class="col-lg-9 col-md-8 col-sm-7">
