--- a/src/Mzayad.Web/Content/site-home.less
+++ b/src/Mzayad.Web/Content/site-home.less
@@ -78,7 +78,7 @@
                 .product-information {
 
                     position: relative;
-                    max-height: 100px;
+                    max-height: 200px;
                     overflow: hidden;
 
                     .more-overlay {
@@ -147,11 +147,11 @@
 
                 &.status-closed {
                 
-                    border-color: @warning;
-                    background-color: fade(@warning, 5%);
+                    border-color: @danger;
+                    background-color: fade(@danger, 5%);
                 
                     > .auction-status-label {
-                        background-color: @warning;
+                        background-color: @danger;
                     
                     }
                 }
