--- a/src/Mzayad.Web/Views/Home/Index.cshtml
+++ b/src/Mzayad.Web/Views/Home/Index.cshtml
@@ -93,7 +93,7 @@
         <div class="auction-status-details" data-bind="visible: isLoaded()">
             <div class="auction-time-left" data-bind="text: timeLeftFormatted"></div>
             <div class="auction-last-bid" data-bind="text: lastBidFormatted"></div>
-            <div class="auction-bid-actions">
+            <div class="auction-bid-actions" style="padding-top: 12px;">
                 @if (Request.IsAuthenticated)
                 {
                     <button type="button" class="btn btn-default" data-bind="click: submitBid">Bid</button>
@@ -108,8 +108,8 @@
 </script>
 
 <script type="text/html" id="upcoming-template">
-    <div class="auction-status status-closed">
-        <div class="auction-status-label" data-bind="text: title">Upcoming</div>
+    <div class="auction-status status-upcoming">
+        <div class="auction-status-label">Upcoming</div>
         <div class="auction-status-details">
             <div class="auction-start-time" data-bind="text: startTimeFormatted"></div>
         </div>
@@ -173,7 +173,7 @@
                     });
 
                     self.startTimeFormatted = ko.computed(function() {
-                        return moment(self.startUtc).format('D MMM HH:mm');
+                        return "Starting: " + moment(self.startUtc()).format('D MMM HH:mm');
                     });
 
                     self.submitBid = function() {
@@ -242,7 +242,7 @@
 
                         $this.data("scrollHeight", $this[0].scrollHeight);
 
-                        if ($this.height() === 100) {
+                        if ($this.height() === 200) {
                             $this.find(".more-overlay").show();
                             var toggles = $this.siblings(".information-toggles");
                             toggles.find(".btn-show-more").show();
@@ -280,7 +280,7 @@
                     var moreOverlay = productInformation.find(".more-overlay");
                     var showMore = $this.siblings(".btn-show-more");
 
-                    productInformation.animate({ maxHeight: 100 }, 500);
+                    productInformation.animate({ maxHeight: 200 }, 500);
                     moreOverlay.show();
                     showMore.show();
                     $this.hide();
