MZ-53 MZ-54 1- Create OrderService.CreateOrder() 2- then call it within AuctionService.CloseAuction(). So when we close an auction we automatically start creating an order.

--- a/src/Mzayad.Web/Views/Home/Index.cshtml
+++ b/src/Mzayad.Web/Views/Home/Index.cshtml
@@ -221,11 +221,17 @@
                     }
                 };
 
-                auctionHub.client.closeAuction = function(auctionId) {
+                auctionHub.client.closeAuction = function(auctionId,userId) {
                     console.log("Closed auction: " + auctionId);
                     var auction = viewModel.getAuction(auctionId);
                     if (auction) {
-                        auction.status("Closed");
+                        
+                        
+                        if (self.lastBidUser == userId) {
+
+                        } else {
+                            auction.status("Closed");
+                        }
                     }
                 }
 
