--- a/src/Mzayad.Web/Views/Order/Summary.cshtml
+++ b/src/Mzayad.Web/Views/Order/Summary.cshtml
@@ -113,7 +113,7 @@
                 <label class="col-sm-2 control-label">@Global.PaymentMethod</label>
                 <div class="col-sm-10">
                     <p class="form-control-static">
-                        @Html.DropDownListFor(m => m.PaymentMethod, Model.PaymentMethod, new {@class = "form-control"})
+                        @Html.DropDownListFor(m => m.Order.PaymentMethod, Model.PaymentMethod, new {@class = "form-control"})
                     </p>
                 </div>
             </div>
@@ -121,6 +121,7 @@
         </div>
     </div>
     <section class="form-buttons">
-        <button type="submit" class="btn btn-primary">@Global.SaveAndContinue</button>
+        <button type="submit" class="btn btn-default">@Global.SaveAndContinue</button>
+        <a onclick="history.go(-1);" class="btn btn-primary">@Global.Back</a>
     </section>
 }
